--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: "Mulish-Black";
-  src: url("/fonts/Mulish-Medium.ttf") format("truetype");
+  src: url("/fonts/Mulish-Regular.ttf") format("truetype");
 }
 
 .font-major {
